Started working on Floodprotection

--- a/html/artist.html
+++ b/html/artist.html
@@ -37,7 +37,7 @@
       <td>
         <form action="addAlbumToQueue" method="get">
           <input type="hidden" value="{{artistName}}" name="artist"/>
-          <button class="btn btn-info disabled" name="album" type="submit" value="{{albumTitle}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> enqueue {{albumTitle}}</button>
+          <button class="btn btn-info" name="album" type="submit" value="{{albumTitle}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> enqueue {{albumTitle}}</button>
         </form>
       </td>
     </tr>
