Added ticket display to frontend

--- a/html/baseTemplate.html
+++ b/html/baseTemplate.html
@@ -76,8 +76,8 @@
         <table class="table table-striped">
           <tr>
             <th class=""><span class="glyphicon glyphicon-equalizer" aria-hidden="true"></span> Now playing</th>
-            <th class=""> <span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span> {{voteCount}} / {{votesRequired}} votes required to skip</th>
-            <th class=""></th>
+            <th class=""><span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span> {{voteCount}} / {{votesRequired}} votes required to skip</th>
+            <th class=""><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span> {{actionsLeft}} / {{maxActions}} queue tickets left</th>
           </tr>
           <tr>
             <td>
