Made upload attributes sortable and displayed them sorted

--- a/html/artist.html
+++ b/html/artist.html
@@ -63,11 +63,11 @@
     <tr>
       <td>{{trackTitle}}</td>
       <td>
-        <form action="track" method="get">
+        <!--form action="" method="">
           <input type="hidden" value="{{artistName}}" name="artist"/>
           <input type="hidden" value="{{albumTitle}}" name="album"/>
-          <button class="btn btn-default" name="track" type="submit" value="{{trackTitle}}">view {{trackTitle}}</button>
-        </form>
+          <button class="btn btn-default disabled" name="track" type="" value="{{trackTitle}}">view {{trackTitle}}</button>
+        </form-->
       </td>
       <td>
         <form action="album" method="get">
