--- a/html/baseTemplate.html
+++ b/html/baseTemplate.html
@@ -58,14 +58,7 @@
           <th>
             <a href="add">
               <button type="button" class="btn btn-success">
-                <span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload
-              </button>
-            </a>
-          </th>
-          <th>
-            <a href="artists">
-              <button type="button" class="btn btn-success">
-                <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Refresh
+                <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
               </button>
             </a>
           </th>
