Restructured Upload infrastructure to make more sense, Added new Routing architecture to the http frontend, it now allows devs to split different pages into different handlers.

--- a/html/baseTemplate.html
+++ b/html/baseTemplate.html
@@ -8,7 +8,7 @@
     <title>Pynitus</title>
 
     <!-- Bootstrap -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
 
@@ -28,35 +28,35 @@
       <table class="table bg-primary">
         <tr>
           <th>
-            <a href="queue">
+            <a href="/queue">
               <button type="button" class="btn btn-primary">
                 <span class="glyphicon glyphicon-play" aria-hidden="true"></span> Queue &nbsp;<span class="badge">{{playbackQueue.getQueueLength()}}</span>
               </button>
             </a>
           </th>
           <th>
-            <a href="artists">
+            <a href="/artists">
               <button type="button" class="btn btn-primary">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Artists
               </button>
             </a>
           </th>
           <th>
-            <a href="albums">
+            <a href="/albums">
               <button type="button" class="btn btn-primary">
                 <span class="glyphicon glyphicon-cd" aria-hidden="true"></span> Albums
               </button>
             </a>
           </th>
           <th>
-            <a href="tracks">
+            <a href="/tracks">
               <button type="button" class="btn btn-primary">
                 <span class="glyphicon glyphicon-music" aria-hidden="true"></span> Tracks
               </button>
             </a>
           </th>
           <th>
-            <a href="add">
+            <a href="/add">
               <button type="button" class="btn btn-success">
                 <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
               </button>
