Refactored Track to explicitly declare members

--- a/html/artists.html
+++ b/html/artists.html
@@ -23,3 +23,5 @@
       {% endfor %}
     </table>
 {% endblock %}
+
+track (location text primary key, type text,imported bool, available bool, init bool)
