--- a/html/baseTemplate.html
+++ b/html/baseTemplate.html
@@ -35,21 +35,21 @@
             </a>
           </th>
           <th>
-            <a href="/artists">
+            <a href="/library/artists">
               <button type="button" class="btn btn-primary">
                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Artists
               </button>
             </a>
           </th>
           <th>
-            <a href="/albums">
+            <a href="/library/albums">
               <button type="button" class="btn btn-primary">
                 <span class="glyphicon glyphicon-cd" aria-hidden="true"></span> Albums
               </button>
             </a>
           </th>
           <th>
-            <a href="/tracks">
+            <a href="/library/tracks">
               <button type="button" class="btn btn-primary">
                 <span class="glyphicon glyphicon-music" aria-hidden="true"></span> Tracks
               </button>
