--- a/html/tracks.html
+++ b/html/tracks.html
@@ -8,29 +8,29 @@
         <th></th>
         <th></th>
       </tr>
-      {% for track, album, artist in trackAndAlbumAndArtistNames %}
+      {% for track, album, artist in tracks %}
       <tr>
         <td>{{track}}</td>
         <td>
-          <form action="artist" method="get">
+          <form action="/library/artist" method="get">
             <button class="btn btn-default" name="artist" type="submit" value="{{artist}}">view {{artist}}</button>
           </form>
         </td>
         <td>
-          <form action="album" method="get">
+          <form action="/library/album" method="get">
             <input type="hidden" value="{{artist}}" name="artist"/>
             <button class="btn btn-default" name="album" type="submit" value="{{album}}">view {{album}}</button>
           </form>
         </td>
         <td>
-          <form action="addToQueue" method="get">
+          <form action="/queue/add" method="get">
             <input type="hidden" value="{{artist}}" name="artist"/>
             <input type="hidden" value="{{album}}" name="album"/>
             <button class="btn btn-info" name="track" type="submit" value="{{track}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> enqueue</button>
           </form>
         </td>
         <td>
-          <form action="deleteTrack" method="get">
+          <form action="/library/deleteTrack" method="get">
             <input type="hidden" value="{{artist}}" name="artist"/>
             <input type="hidden" value="{{album}}" name="album"/>
             <button class="btn btn-danger" name="track" type="submit" value="{{track}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> remove</button>
