--- a/html/unimported.html
+++ b/html/unimported.html
@@ -2,29 +2,30 @@
 {% block content %}
     <table class="table table-hover" id="artistTable">
       <tr>
-        <th>Album</th>
+        <th>Track</th>
         <th>Artist</th>
-        <th>Tracks</th>
+        <th>Album</th>
         <th></th>
       </tr>
-      {% for album, artist in albums %}
+      {% for track, album, artist in tracks %}
       <tr>
-        <td>{{album}}</td>
+        <td>{{track}}</td>
         <td>
-          <form action="/library/artist" method="get">
+          <form action="artist" method="get">
             <button class="btn btn-default" name="artist" type="submit" value="{{artist}}">view {{artist}}</button>
           </form>
         </td>
         <td>
-          <form action="/library/album" method="get">
+          <form action="album" method="get">
             <input type="hidden" value="{{artist}}" name="artist"/>
             <button class="btn btn-default" name="album" type="submit" value="{{album}}">view {{album}}</button>
           </form>
         </td>
         <td>
-          <form action="/library/deleteAlbum" method="get">
+          <form action="edit" method="get">
             <input type="hidden" value="{{artist}}" name="artist"/>
-            <button class="btn btn-danger" name="album" type="submit" value="{{album}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> remove</button>
+            <input type="hidden" value="{{album}}" name="album"/>
+            <button class="btn btn-success" name="track" type="submit" value="{{track}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> edit</button>
           </form>
         </td>
       </tr>
