--- a/html/baseTemplate.html
+++ b/html/baseTemplate.html
@@ -56,7 +56,7 @@
             </a>
           </th>
           <th>
-            <a href="/add">
+            <a href="/upload/new">
               <button type="button" class="btn btn-success">
                 <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
               </button>
