Added some more views, first version of unimported tracks and editing views Also fixed some db and overall design bugs

--- a/html/artist.html
+++ b/html/artist.html
@@ -44,6 +44,14 @@
     {% endfor %}
   </table>
 
+  <div class="panel panel-info">
+  <div class="panel-heading">Plain panel heading - Info</div>
+  <div class="panel-body">
+    Easily add a heading container to your panel with .panel-heading. You may also include any head tags with a .panel-title class to add a pre-styled heading.<br><br>
+For proper link coloring, be sure to place links in headings within .panel-title.
+  </div>
+</div>
+
   <table class="table table-striped" id="playerTable">
     <tr>
       <th><span class="glyphicon glyphicon-music" aria-hidden="true"></span> Tracks</th>
