--- a/html/new_upload.html
+++ b/html/new_upload.html
@@ -1,5 +1,10 @@
 {% extends "baseTemplate.html" %}
 {% block content %}
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Pynitus</a></li>
+    <li class="breadcrumb-item active">Upload</li>
+  </ol>
+  <hr/>
   <table class="table table-striped">
     <tr>
       <th><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Add a new Track</th>
