--- a/html/queue.html
+++ b/html/queue.html
@@ -1,5 +1,12 @@
 {% extends "baseTemplate.html" %}
 {% block content %}
+<div class="panel-heading">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Pynitus</a></li>
+    <li class="breadcrumb-item active">Queue</li>
+  </ol>
+</div>
+<div class="panel-body">
   <table class="table table-striped">
     <tr>
       <th><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> In Queue</th>
@@ -15,28 +22,29 @@
         <th>Album</th>
         <th></th>
       </tr>
-      {% for track, album, artist in trackAndAlbumAndArtistNames %}
+      {% for track in tracks %}
       <tr>
-        <td>{{track}}</td>
+        <td>{{track.title}}</td>
         <td>
-          <form action="artist" method="get">
-            <button class="btn btn-default" name="artist" type="submit" value="{{artist}}">view {{artist}}</button>
+          <form action="/details/artist" method="get">
+            <button class="btn btn-default" name="artist" type="submit" value="{{track.artist}}">view {{track.artist}}</button>
           </form>
         </td>
         <td>
-          <form action="album" method="get">
-            <input type="hidden" value="{{artist}}" name="artist"/>
-            <button class="btn btn-default" name="album" type="submit" value="{{album}}">view {{album}}</button>
+          <form action="/details/album" method="get">
+            <input type="hidden" value="{{track.artist}}" name="track.artist"/>
+            <button class="btn btn-default" name="album" type="submit" value="{{track.album}}">view {{track.album}}</button>
           </form>
         </td>
         <td>
-          <form action="removeFromQueue" method="get">
-            <input type="hidden" value="{{artist}}" name="artist"/>
-            <input type="hidden" value="{{album}}" name="album"/>
-            <button class="btn btn-danger" name="track" type="submit" value="{{track}}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> remove</button>
+          <form action="/queue/remove" method="get">
+            <input type="hidden" value="{{track.artist}}" name="track.artist"/>
+            <input type="hidden" value="{{track.album}}" name="track.album"/>
+            <button class="btn btn-danger" name="track" type="submit" value="{{track.title}}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> remove</button>
           </form>
         </td>
       </tr>
       {% endfor %}
     </table>
+</div>
 {% endblock %}
