--- a/html/unimported.html
+++ b/html/unimported.html
@@ -1,34 +1,30 @@
 {% extends "baseTemplate.html" %}
 {% block content %}
+<div class="panel-heading">
+  <ol class="breadcrumb" style="background-color:#375a7f">
+    <li class="breadcrumb-item"><a href="/"><b>Pynitus</b></a></li>
+    <li class="breadcrumb-item"><a href="/admin/panel">Admin</a></li>
+    <li class="breadcrumb-item active">Unimported</li>
+  </ol>
+</div>
+<div class="panel-body">
     <table class="table table-hover" id="artistTable">
       <tr>
-        <th>Track</th>
-        <th>Artist</th>
-        <th>Album</th>
+        <th>Location</th>
+        <th>Complete</th>
         <th></th>
       </tr>
-      {% for track, album, artist in tracks %}
+      {% for track in tracks %}
       <tr>
-        <td>{{track}}</td>
+        <td>{{track.location}}</td>
+        <td>{{track.completeness}}</td>
         <td>
-          <form action="artist" method="get">
-            <button class="btn btn-default" name="artist" type="submit" value="{{artist}}">view {{artist}}</button>
-          </form>
-        </td>
-        <td>
-          <form action="album" method="get">
-            <input type="hidden" value="{{artist}}" name="artist"/>
-            <button class="btn btn-default" name="album" type="submit" value="{{album}}">view {{album}}</button>
-          </form>
-        </td>
-        <td>
-          <form action="edit" method="get">
-            <input type="hidden" value="{{artist}}" name="artist"/>
-            <input type="hidden" value="{{album}}" name="album"/>
-            <button class="btn btn-success" name="track" type="submit" value="{{track}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> edit</button>
+          <form action="/admin/unimported/edit" method="get">
+            <button class="btn btn-success" name="location" type="submit" value="{{track.location}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> edit</button>
           </form>
         </td>
       </tr>
       {% endfor %}
     </table>
+</div>
 {% endblock %}
