Added some more views, implemented DatabaseSqlite.updateTrack()

--- a/html/albums.html
+++ b/html/albums.html
@@ -1,33 +1,42 @@
 {% extends "baseTemplate.html" %}
 {% block content %}
-    <table class="table table-hover" id="artistTable">
-      <tr>
-        <th>Album</th>
-        <th>Artist</th>
-        <th>Tracks</th>
-        <th></th>
-      </tr>
-      {% for album, artist in albums %}
-      <tr>
-        <td>{{album}}</td>
-        <td>
-          <form action="/library/artist" method="get">
-            <button class="btn btn-default" name="artist" type="submit" value="{{artist}}">view {{artist}}</button>
-          </form>
-        </td>
-        <td>
-          <form action="/library/album" method="get">
-            <input type="hidden" value="{{artist}}" name="artist"/>
-            <button class="btn btn-default" name="album" type="submit" value="{{album}}">view {{album}}</button>
-          </form>
-        </td>
-        <td>
-          <form action="/library/deleteAlbum" method="get">
-            <input type="hidden" value="{{artist}}" name="artist"/>
-            <button class="btn btn-danger" name="album" type="submit" value="{{album}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> remove</button>
-          </form>
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
+<div class="panel-heading">
+  <ol class="breadcrumb" style="background-color:#375a7f">
+    <li class="breadcrumb-item"><a href="/"><b>Pynitus</b></a></li>
+    <li class="breadcrumb-item"><a href="/library">Library</a></li>
+    <li class="breadcrumb-item active">Albums</li>
+  </ol>
+</div>
+<div class="panel-body">
+  <table class="table table-hover" id="artistTable">
+    <tr>
+      <th>Album</th>
+      <th>Artist</th>
+      <th>Tracks</th>
+      <th></th>
+    </tr>
+    {% for album, artist in albums %}
+    <tr>
+      <td>{{album}}</td>
+      <td>
+        <form action="/library/artist" method="get">
+          <button class="btn btn-default" name="artist" type="submit" value="{{artist}}">view {{artist}}</button>
+        </form>
+      </td>
+      <td>
+        <form action="/library/album" method="get">
+          <input type="hidden" value="{{artist}}" name="artist"/>
+          <button class="btn btn-default" name="album" type="submit" value="{{album}}">view {{album}}</button>
+        </form>
+      </td>
+      <td>
+        <form action="/library/deleteAlbum" method="get">
+          <input type="hidden" value="{{artist}}" name="artist"/>
+          <button class="btn btn-danger" name="album" type="submit" value="{{album}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> remove</button>
+        </form>
+      </td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 {% endblock %}
