--- a/html/queue.html
+++ b/html/queue.html
@@ -1,7 +1,7 @@
 {% extends "baseTemplate.html" %}
 {% block content %}
 <div class="panel-heading">
-  <ol class="breadcrumb">
+  <ol class="breadcrumb" style="background-color:#375a7f">
     <li class="breadcrumb-item"><a href="/">Pynitus</a></li>
     <li class="breadcrumb-item active">Queue</li>
   </ol>
@@ -14,37 +14,36 @@
       <th></th>
     </tr>
   </table>
-
-    <table class="table table-hover" id="artistTable">
-      <tr>
-        <th>Track</th>
-        <th>Artist</th>
-        <th>Album</th>
-        <th></th>
-      </tr>
-      {% for track in tracks %}
-      <tr>
-        <td>{{track.title}}</td>
-        <td>
-          <form action="/details/artist" method="get">
-            <button class="btn btn-default" name="artist" type="submit" value="{{track.artist}}">view {{track.artist}}</button>
-          </form>
-        </td>
-        <td>
-          <form action="/details/album" method="get">
-            <input type="hidden" value="{{track.artist}}" name="track.artist"/>
-            <button class="btn btn-default" name="album" type="submit" value="{{track.album}}">view {{track.album}}</button>
-          </form>
-        </td>
-        <td>
-          <form action="/queue/remove" method="get">
-            <input type="hidden" value="{{track.artist}}" name="track.artist"/>
-            <input type="hidden" value="{{track.album}}" name="track.album"/>
-            <button class="btn btn-danger" name="track" type="submit" value="{{track.title}}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> remove</button>
-          </form>
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
+  <table class="table table-hover" id="artistTable">
+    <tr>
+      <th>Track</th>
+      <th>Artist</th>
+      <th>Album</th>
+      <th></th>
+    </tr>
+    {% for track in tracks %}
+    <tr>
+      <td>{{track.title}}</td>
+      <td>
+        <form action="/details/artist" method="get">
+          <button class="btn btn-default" name="artist" type="submit" value="{{track.artist}}">view {{track.artist}}</button>
+        </form>
+      </td>
+      <td>
+        <form action="/details/album" method="get">
+          <input type="hidden" value="{{track.artist}}" name="track.artist"/>
+          <button class="btn btn-default" name="album" type="submit" value="{{track.album}}">view {{track.album}}</button>
+        </form>
+      </td>
+      <td>
+        <form action="/queue/remove" method="get">
+          <input type="hidden" value="{{track.artist}}" name="track.artist"/>
+          <input type="hidden" value="{{track.album}}" name="track.album"/>
+          <button class="btn btn-danger" name="track" type="submit" value="{{track.title}}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> remove</button>
+        </form>
+      </td>
+    </tr>
+    {% endfor %}
+  </table>
 </div>
 {% endblock %}
