Fixed wrong href

--- a/html/library.html
+++ b/html/library.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <a href="artists" class="thumbnail">
+        <a href="/library/artists" class="thumbnail">
           <img src="/img/artist.jpeg">
         </a>
         <p><h4 style="text-align: center">  <span class="glyphicon glyphicon-user" aria-hidden="true"></span> &nbsp;&nbsp;Artists</h4></p>
@@ -18,7 +18,7 @@
     </div>
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <a href="albums" class="thumbnail">
+        <a href="/library/albums" class="thumbnail">
           <img src="/img/album.jpeg">
         </a>
         <p><h4 style="text-align: center">  <span class="glyphicon glyphicon-cd" aria-hidden="true"></span> &nbsp;&nbsp;Albums</h4></p>
@@ -26,7 +26,7 @@
     </div>
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <a href="artists" class="thumbnail">
+        <a href="/library/tracks" class="thumbnail">
           <img src="/img/cd.jpg">
         </a>
         <p><h4 style="text-align: center">  <span class="glyphicon glyphicon-music" aria-hidden="true"></span> &nbsp;&nbsp;Tracks</h4></p>
@@ -34,7 +34,7 @@
     </div>
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <a href="search" class="thumbnail">
+        <a href="/library/search" class="thumbnail">
           <img src="/img/search.jpg">
         </a>
         <p><h4 style="text-align: center">  <span class="glyphicon glyphicon-search" aria-hidden="true"></span> &nbsp;&nbsp;Search</h4></p>
