Minor fixes to DB

--- a/html/albums.html
+++ b/html/albums.html
@@ -15,7 +15,7 @@
       <th>Tracks</th>
       <th></th>
     </tr>
-    {% for album, artist in albums %}
+    {% for artist, album in albums %}
     <tr>
       <td>{{album}}</td>
       <td>
